@@ -1,8 +1,6 @@
 	TODO
 ************
 Bugs & Problems:
-* Improve handling of indention on
-	* Inserting an list environment
 * Closing dialogs via hitting return
 
 Features:
