@@ -1,3 +1,8 @@
+2010-04-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Fix indention on insert environment features.
+
+
 2010-04-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Ensure basic indent is getting applied on closing command of
